<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/snake_layout"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/holo_orange_light"
                android:paddingBottom="0dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:paddingTop="0dp"
                tools:context=".MainMenu">

    <TextView
        android:id="@+id/snake_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/snake_middle"
        android:layout_marginRight="14dp"
        android:layout_toLeftOf="@id/snake_middle"
        android:text="@string/title_snake_left"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/snake_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:text="@string/title_snake_middle"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/snake_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/snake_middle"
        android:layout_alignBottom="@id/snake_middle"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@id/snake_middle"
        android:text="@string/title_snake_right"
        android:textSize="25sp"/>

    <ImageView
        android:id="@+id/classic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="-32dp"
        android:layout_toLeftOf="@+id/snake_middle"

        android:src="@drawable/menu_options"/>

    <ImageView
        android:id="@+id/no_walls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-32dp"
        android:layout_toRightOf="@id/snake_middle"
        android:layout_alignTop="@id/classic"
        android:src="@drawable/menu_options"/>

    <ImageView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/classic"
        android:layout_below="@+id/classic"
        android:layout_marginTop="16dp"
        android:src="@drawable/menu_options"/>

    <ImageView
        android:id="@+id/bomb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/no_walls"
        android:layout_alignTop="@id/settings"
        android:src="@drawable/menu_options"/>

</RelativeLayout>