<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/nowalls_score_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.seblogapps.stognacci.snakegame.NoWallsScore">

    <TextView
        android:id="@+id/gameover_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/gameover_middle"
        android:layout_marginRight="14dp"
        android:layout_toLeftOf="@id/gameover_middle"
        android:text="@string/title_gameover_left"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/gameover_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:text="@string/title_gameover_middle"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/gameover_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/gameover_middle"
        android:layout_alignBottom="@id/gameover_middle"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@id/gameover_middle"
        android:text="@string/title_gameover_right"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/player_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="-62dp"
        android:layout_toLeftOf="@+id/gameover_middle"
        android:layout_toStartOf="@+id/gameover_middle"
        android:background="@drawable/menu_options"/>

    <TextView
        android:id="@+id/mode_high_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/player_score"
        android:layout_alignTop="@id/player_score"
        android:layout_toRightOf="@+id/gameover_middle"
        android:layout_marginLeft="-62dp"
        android:background="@drawable/menu_options"/>

    <ImageView
        android:id="@+id/play_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/menu_options"
        android:layout_below="@+id/player_score"
        android:layout_alignStart="@+id/player_score"
        android:layout_marginTop="16dp"/>

    <ImageView
        android:id="@+id/goto_main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/mode_high_score"
        android:layout_alignTop="@+id/play_again"
        android:src="@drawable/menu_options"/>
</RelativeLayout>
